:sparkles: feat: Atualizacao imagens homepage

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -86,15 +86,15 @@
                   <div class="carousel-caption d-block">
                     <h5>Cuidado e Companhia</h5>
                     <p>Uma mão amiga, um sorriso afetuoso. Juntos,
-                      <br> fazemos a diferença na vida dos nossos idosos.
+                      <br> fazemos a diferença.
                     </p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="./homePage/images/imagem-limpeza.jpg" class="d-block w-100" alt=" ...">
+                  <img src="./homePage/images/pexels-photo-6146961.jpeg" class="d-block w-100" alt=" ...">
                   <div class="carousel-caption d-block">
-                    <h5>Comunidade em Ação</h5>
-                    <p>Cada ato de limpeza é um passo em direção a um ambiente mais saudável e feliz.</p>
+                    <h5>Harmonia Solidária</h5>
+                    <p>Somando forças e amor em prol de um propósito maior. Juntos, podemos mais.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -118,20 +118,20 @@
 
         <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
           <div class="card rounded-5 card-projetos">
+            <img src="./homePage/images/pexels-photo-6646917.jpeg" class="rounded-5 pb-2" alt="...">
+            <h5 class="pb-1">Alimento e Amor</h5>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+          <div class="card rounded-5 card-projetos">
             <img src="./homePage/images/imagem-limpeza.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1">Amigo Solidário</h5>
+            <h5 class="pb-1">Cidade Radiante</h5>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-maos.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1">Abrace com Amor</h5>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
-          <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-uniao.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1 tittle">Juntos Podemos</h5>
+            <img src="./homePage/images/imagem-voluntarios-09.jpg" class="rounded-5 pb-2" alt="...">
+            <h5 class="pb-1 tittle">Amigos Peludos</h5>
           </div>
         </div>
       </div>
