--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-    
+        </div>
     </main>
 
     
@@ -142,7 +142,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="./perfilVoluntarioo.js"></script>
+    <script src="./perfilEmpresa.html"></script>
 
 </body>
 
