--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="../homePage/css/reset.css">
     <link rel="stylesheet" href="projetos.css">
     <link rel="stylesheet" href="modal.css">
     <link rel="stylesheet" href="../geral/menu/menu.css">
-    <link rel="stylesheet" href="../homePage/css/reset.css">
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -23,35 +22,33 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-            <div class="container-fluid rounded-3 mx-3">
-                <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                    <img src="../homePage/images/logo-white.svg" alt="Logo" width="45"
-                        class="d-inline-block align-text-top">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="projetos.html">Projetos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
-                        </li>
-                    </ul>
-                </div>
+          <div class="container-fluid rounded-3 mx-3">
+            <a class="navbar-brand d-flex nav-link ms-2" href="#">
+              <img src="../homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="projetos.html">Projetos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
+                </li>
+              </ul>
             </div>
+          </div>
         </nav>
-    </header>
+      </header>
 
     <main class="corpo" >
         <div class="grid-wrapper" id="mainContent">
