fix: troca de texto lorem ipsun

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -213,9 +213,9 @@
             
            </div>
             <div class="modal-descricao-container">
-                <p class="modal-descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est enim aspernatur
-                    ipsum nesciunt. Totam porro, exercitationem quam delectus dignissimos aut at dolor in dolore, non harum,
-                    quo ut cupiditate aliquam?</p>
+                <p class="modal-descricao">Nossa entidade tem a forte missão de ajudar os moradores do bairro e arredores a viverem com mais 
+                    dignidade. Todas as pessoas atendidas recebem auxílio e carinho que merecem, atendimento humanizado e voluntários atenciosos. Faça parte do nosso projeto! 
+                </p>
                 
             </div>
             <div class="modal-dados-empresa-horas">
@@ -226,11 +226,11 @@
                </div>
                 <div class="modal-empresa">
                     <img class="img-empresa" src="svg/empresa-black.svg" alt="">
-                    <h3 >Associação de Moradores do bairro Alto das Dores</h3>
+                    <h3 >Associação de Moradores Vale do Sol</h3>
                 </div>
             </div>
             <div class="modal-footer">
-                <p class="btn-participar">Participar</p>
+                <p class="btn-participar">Inscrever</p>
             </div>
         </div>
     </div>
