--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projetos</title>
     <link rel="stylesheet" href="../homePage/css/reset.css">
     <link rel="stylesheet" href="projetos.css">
     <link rel="stylesheet" href="modal.css">
