Alteracao menus footer

--- a/codigo-fonte/src/geral/footer/footer.html
+++ b/codigo-fonte/src/geral/footer/footer.html
@@ -4,17 +4,17 @@
         <div class="row text-center d-flex justify-content-center">
             <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!" class="text-white">Cadastre-se</a>
-                </h6>
-            </div>
-            <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!" class="text-white">Login</a>
+                    <a href="##" class="text-white">Home</a>
                 </h6>
             </div>
             <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
                     <a href="#!" class="text-white">Projetos</a>
+                </h6>
+            </div>
+            <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                    <a href="#!" class="text-white">Perfil</a>
                 </h6>
             </div>
             <div class="col-md-2">
