Correcao niveis pagina perfil voluntario

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -85,25 +85,25 @@
                     <div class="col-lg-3 col-md-3 col-sm-6 my-3">
                         <img class="mb-3" src="./imagens/safira.png" alt="">
                         <h4>Nível Safira</h4>
-                        <h6>Até 2 horas</h6>
+                        <h6>Acima de 2 horas</h6>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-6 my-3">
                         <img class="mb-3" src="./imagens/ametista.png" alt="">
                         <h4>Nível Ametista</h4>
-                        <h6>Até 10 horas</h6>
+                        <h6>Acima de 10 horas</h6>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-6 my-3">
                         <img class="mb-3" src="./imagens/esmeralda.png" alt="">
                         <h4>Nível Esmeralda</h4>
-                        <h6>Até 30 horas</h6>
+                        <h6>Acima de 30 horas</h6>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-6 my-3">
                         <img class="mb-3" src="./imagens/rubi.png" alt="">
                         <h4>Nível Rubi</h4>
-                        <h6>Até 60 horas</h6>
+                        <h6>Acima de 60 horas</h6>
                     </div>
                 </div>
             </div>
