--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -209,22 +209,17 @@
       <div class="row text-center d-flex justify-content-center">
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#!" class="text-white">Home</a>
+            <a href="/src/index.html" class="text-white">Home</a>
           </h6>
         </div>
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#!" class="text-white">Projetos</a>
+            <a href="/src/projetos/projetos.html" class="text-white">Projetos</a>
           </h6>
         </div>
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#!" class="text-white">Perfil</a>
-          </h6>
-        </div>
-        <div class="col-md-2">
-          <h6 class="text-uppercase font-weight-bold">
-            <a href="#!" class="text-white">Contato</a>
+            <a href="#" class="text-white">Contato</a>
           </h6>
         </div>
       </div>
