update: footer e links da pagina

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -166,28 +166,22 @@
     </main>
 
     <footer class="section text-center text-white">
-        </br>
-        <hr class="my-4 mb-4" />
+        <hr class="my-4" />
         <div class="container">
             <div class="row text-center d-flex justify-content-center">
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Cadastre-se</a>
+                        <a href="../index.html" class="text-white">Home</a>
                     </h6>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Login</a>
+                        <a href="projetos.html" class="text-white">Projetos</a>
                     </h6>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Projetos</a>
-                    </h6>
-                </div>
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Contato</a>
+                        <a href="#" class="text-white">Contato</a>
                     </h6>
                 </div>
             </div>
@@ -199,6 +193,8 @@
             <h6> © 2023 Copyright: VoluntaRia</h6>
         </div>
     </footer>
+
+
     <div class="modal-container">
         <div class="modal-body">
             <div class="modal-header">
