--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -209,12 +209,12 @@
       <div class="row text-center d-flex justify-content-center">
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/src/index.html" class="text-white">Home</a>
+            <a href="./index.html" class="text-white">Home</a>
           </h6>
         </div>
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/src/projetos/projetos.html" class="text-white">Projetos</a>
+            <a href="../src/projetos/projetos.html" class="text-white">Projetos</a>
           </h6>
         </div>
         <div class="col-md-2">
