--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -35,7 +35,7 @@
                   <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
+                  <a class="nav-link entrar-sair" href="../loginCadastro/loginCadastro.html">Entrar</a>
                 </li>
               </ul>
             </div>
