--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -137,14 +137,14 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Inscrição no Projeto</h1>
+          <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Parabéns</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
         </div>
-        <div class="modal-body">
-          ...
-        </div>
+        <!-- <div class="modal-body">
+          <p>Sua inscrição foi aceita!</p>
+        </div> -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
           </div>
       </div>
     </div>
