--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -118,7 +118,7 @@
                         <h5 class="">Amigo Solidário</h5>
                         <h3>5 horas</h3>
                         <div class="col text-center">
-                            <button class="btn btn-secondary my-2">Finalizar</button>
+                            <button class="btn btn-secondary my-2 botao" id="botao" onclick="finalizar()">Finalizar</button>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                         <h5 class="">Abrace com Amor</h5>
                         <h3>12 horas</h3>
                         <div class="col text-center">
-                            <button class="btn btn-secondary my-2">Finalizar</button>
+                            <button class="btn btn-secondary my-2 botao" id="botao" onclick="finalizar()">Finalizar</button>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                         <h5 class="tittle">Juntos Podemos</h5>
                         <h3>18 horas</h3>
                         <div class="col text-center">
-                            <button class="btn btn-secondary my-2">Finalizar</button>
+                            <button class="btn btn-secondary my-2 botao" id="botao" onclick="finalizar()">Finalizar</button>
                         </div>
                     </div>
                 </div>
