--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -214,12 +214,12 @@
         </div>
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="../src/projetos/projetos.html" class="text-white">Projetos</a>
+            <a href="./projetos/projetos.html" class="text-white">Projetos</a>
           </h6>
         </div>
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#" class="text-white">Contato</a>
+            <a href="https://api.whatsapp.com/send?phone=5531999999999" class="text-white">Contato</a>
           </h6>
         </div>
       </div>
