--- a/codigo-fonte/src/geral/footer/footer.html
+++ b/codigo-fonte/src/geral/footer/footer.html
@@ -4,17 +4,17 @@
         <div class="row text-center d-flex justify-content-center">
             <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                    <a href="/src/index.html" class="text-white">Home</a>
+                    <a href="./index.html" class="text-white">Home</a>
                 </h6>
             </div>
             <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                    <a href="/src/projetos/projetos.html" class="text-white">Projetos</a>
+                    <a href="./projetos/projetos.html" class="text-white">Projetos</a>
                 </h6>
             </div>
             <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                    <a href="#" class="text-white">Contato</a>
+                    <a href="https://api.whatsapp.com/send?phone=5531999999999" class="text-white">Contato</a>
                 </h6>
             </div>
         </div>
