Adicionado link no botao ver mais homepage

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -138,7 +138,7 @@
 
       <div class="row mt-4">
         <div class="col text-center">
-          <button class="btn btn-secondary">Ver mais</button>
+          <a href="./projetos/projetos.html" class="btn btn-secondary">Ver mais</a>
         </div>
       </div>
     </div>
