Botões e novas imagens de perfil para voluntário.

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -66,11 +66,14 @@
 
                 <div class="row"></div>
                 <div class=" col-6 mt-4 text-center">
-                    <button class="btn btn-secondary">Imagem Perfil</button>
+                    <button class="btn btn-secondary btn-imagem-perfil">Imagem perfil</button>
+                    <button class="btn btn-secundary btn-back">&lt;</button>
+                    <button class="btn btn-secundary btn-next">&gt;</button>
+
                 </div>
 
                 <div class="col-6 mt-4 text-center">
-                    <button class="btn btn-secondary">Emitir Certificado</button>
+                    <button class="btn btn-secondary" id="emitirCertificadoBtn">Emitir certificado</button>
                 </div>
 
 
