:art:style: alterar imagens
alterar imagens

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -52,7 +52,7 @@
                     <!-- colunas row-->
                     <h3>Empresa</h3>
                     <div class="card rounded-5 card-projetos border-0"> <!-- classe arredondando-->
-                        <img class="mx-auto mb-4 img-fluid perfil rounded-5" src="./imagens/perfilempresaRoxo.png">
+                        <img class="mx-auto mb-4 img-fluid perfil rounded-5" src="./imagens/perfilEmpresa.png">
                         <h4 class="">Pet Vitallis</h4>
                         <h5>3 projetos</h5>
                         <div class="col text-center margin">
