:sparkles: fix botão de cadastro de projetos

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -56,7 +56,7 @@
                         <h4 class="">Pet Vitallis</h4>
                         <h5>3 projetos</h5>
                         <div class="col text-center margin">
-                            <button class="btn btn-secondary my-2">Cadastrar Projeto</button>
+                            <button class="btn btn-secondary my-2">Cadastrar projeto</button>
                         </div>
                     </div>
                 </div>
