:sparkles: js_botão de encerrar projetos

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -72,7 +72,7 @@
                                     <h4 class="">Adote um AUmigo</h4>
                                     <h5>12 horas</h5>
                                     <div class="col text-center margin">
-                                        <button class="btn btn-secondary my-2">Encerrar</button>
+                                        <button class="btn btn-secondary my-2" id="encerrarBtn1">Encerrar</button>
                                     </div>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                     <h4 class="">EcoVida</h4>
                                     <h5>6 horas</h5>
                                     <div class="col text-center margin">
-                                        <button class="btn btn-secondary my-2">Encerrar</button>
+                                        <button class="btn btn-secondary my-2" id="encerrarBtn2">Encerrar</button>
                                     </div>
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                                     <h4 class="tittle">Inglês Solidário</h4>
                                     <h5>60 horas</h5>
                                     <div class="col text-center margin">
-                                        <button class="btn btn-secondary my-2">Encerrar</button>
+                                        <button class="btn btn-secondary my-2" id="encerrarBtn3">Encerrar</button>
                                     </div>
                                 </div>
                             </div>
