--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -47,26 +47,25 @@
 
     <main class="container" id="mainContent">
         <div class="section section-1">
-            <div class="row mt-5 d-flex"> <!-- largura/altura da row-->
+            <div class="row mt-5 d-flex">
                 <div class="col-lg-3 col-md-12 col-sm-12 text-white text-center mt-lg-5 mt-md-2 mt-sm-2">
-                    <!-- colunas row-->
                     <h3>Empresa</h3>
-                    <div class="card rounded-5 card-projetos border-0"> <!-- classe arredondando-->
+                    <div class="card rounded-5 card-projetos border-0">
                         <img class="mx-auto mb-4 img-fluid perfil rounded-5" src="./imagens/perfilEmpresa.png">
                         <h4 class="">Pet Vitallis</h4>
-                        <h5>3 projetos</h5>
-                        <div class="col text-center margin">
+                        <h5> <span id="totalProjetos">3</span> projetos </h5>
+                         <div class="col text-center margin">
                             <button class="btn btn-secondary my-2">Cadastrar projeto</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> <!-- colunas row-->
+                <div class="col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
                     <h3>Projetos ativos</h3>
                     <div class="card rounded-5 text-center">
-                        <div class="row justify-content-center"> <!-- largura/altura da row-->
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> <!-- colunas row-->
-                                <div class="card rounded-5 card-projetos border-0"> <!-- classe arredondando-->
+                        <div class="row justify-content-center"> 
+                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
+                                <div class="card rounded-5 card-projetos border-0">
                                     <img class="mx-auto mb-4 img-fluid perfil rounded-5"
                                         src="../projetos/images/imagem-voluntarios-05.jpg">
                                     <h4 class="">Adote um AUmigo</h4>
@@ -77,8 +76,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> <!-- colunas row-->
-                                <div class="card rounded-5 card-projetos border-0"> <!-- classe arredondando-->
+                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3">
+                                <div class="card rounded-5 card-projetos border-0">
                                     <img class="mx-auto mb-4 img-fluid perfil rounded-5"
                                         src="../projetos/images/imagem-voluntarios-09.jpg">
                                     <h4 class="">EcoVida</h4>
@@ -89,8 +88,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> <!-- colunas row-->
-                                <div class="card rounded-5 card-projetos border-0"> <!-- classe arredondando-->
+                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
+                                <div class="card rounded-5 card-projetos border-0">
                                     <img class="mx-auto mb-4 img-fluid perfil rounded-5"
                                         src="../projetos/images/imagem-voluntarios-06.jpg">
                                     <h4 class="tittle">Inglês Solidário</h4>
