:sparkles: js_botão de cadastro de projetos redireciona para a página de cadastro

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -55,7 +55,7 @@
                         <h4 class="">Pet Vitallis</h4>
                         <h5> <span id="totalProjetos">3</span> projetos </h5>
                          <div class="col text-center margin">
-                            <button class="btn btn-secondary my-2">Cadastrar projeto</button>
+                            <button id="cadastrarProjetoBtn" class="btn btn-secondary my-2">Cadastrar projeto</button>
                         </div>
                     </div>
                 </div>
