:sparkles: update: padronizando categorias com a tela de Projetos

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -75,16 +75,16 @@
                             <label for="categoria" class="form-label">Selecione a categoria do projeto:</label>
                             <select class="form-select" id="categoria" name="categoria">
                                 <option value="" selected disabled>Escolha uma categoria</option>
-                                <option value="1">Educação e Ensino</option>
-                                <option value="2">Saúde e Bem-Estar</option>
-                                <option value="3">Meio Ambiente</option>
-                                <option value="4">Assistência Social</option>
-                                <option value="5">Animais</option>
-                                <option value="6">Crianças e Adolescentes</option>
-                                <option value="7">Idosos</option>
-                                <option value="8">Cultura e Arte</option>
-                                <option value="9">Esportes e Recreação</option>
-                                <option value="10">Tecnologia e Inovação</option>
+                                <option value="1">Alimentação</option>
+                                <option value="2">Educação</option>
+                                <option value="3">Saúde</option>
+                                <option value="4">Meio ambiente</option>
+                                <option value="5">Direitos humanos</option>
+                                <option value="6">Cultura</option>
+                                <option value="7">Esportes</option>
+                                <option value="8">Tecnologia</option>
+                                <option value="9">Proteção aos animais</option>
+                                <option value="10">Desenvolvimento comunitário</option>
                             </select>
                         </div>
                         <div class="mb-4">
