:sparkles: ajuste da escolha de imagens do projeto

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -89,7 +89,10 @@
                         </div>
                         <div class="mb-4">
                             <label for="imagem" class="form-label">Selecione uma imagem de perfil do projeto:</label>
-                            <input type="file" class="form-control" id="imagem" name="imagem" accept="image/*">
+                            <input type="file" class="form-control" id="imagem" name="imagem" accept="image/*" style="display: none">
+                            <div id="galeria-imagens" class="mb-2">
+                            </div>
+                            <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher imagem</button>
                         </div>
                         <div class="mb-3">
                             <label for="textoGrande" class="form-label">Descrição do projeto:</label>
