:sparkles: ajuste de imagem selecionada

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="mb-4">
                             <label for="imagem" class="form-label">Selecione uma imagem de perfil do projeto:</label>
-                            <input type="file" class="form-control" id="imagem" name="imagem" accept="image/*" style="display: none">
+                            <input type="text" class="form-control" id="imagem" name="imagem" accept="image/*" style="display: none">
                             <div id="galeria-imagens" class="mb-2">
                             </div>
                             <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher imagem</button>
