feat: Adicao do método de logout no menu Sair

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -154,7 +154,8 @@
             </div>
           </div>
         </div>
-      </div>   
+      </div> 
+      <script src="../geral/scripts/globalscript.js"></script>  
     <script  src="./scripts/lista-projetos.js"></script>
     <script  src="./scripts/categorias.js"></script>
     <script  src="projetos.js"></script>
