--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -37,7 +37,7 @@
                             <a class="nav-link active" href="./perfilEmpresa/perfilEmpresa.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sair</a>
+                            <a class="nav-link .entrar-sair" href="#">Sair</a>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
         </footer>
     </footer>
 
-
+    <script src="../geral/scripts/globalscript.js"></script>  
     <script src="./perfilEmpresa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
