--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
+                            <a class="nav-link entrar-sair" href="../loginCadastro/loginCadastro.html">Entrar</a>
                         </li>
                     </ul>
                 </div>
@@ -140,7 +140,7 @@
             </div>
         </footer>
     </footer>
-
+    <script src="../geral/scripts/globalscript.js"></script> 
     <script src="./cadastroProjeto.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
