--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -37,7 +37,7 @@
                             <a class="nav-link active" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sair</a>
+                            <a class="nav-link entrar-sair" href="#">Sair</a>
                         </li>
                     </ul>
                 </div>
