--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./homePage/css/menu.css">
   <link rel="stylesheet" href="./homePage/css/animation.css">
   <link rel="stylesheet" href="./homePage/css/variables.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
