--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <script  src="../projetos/scripts/lista-projetos.js"></script>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
             <div class="container-fluid rounded-3 mx-3">
@@ -59,9 +60,9 @@
 
                 <div class="col-6">
                     <div class="card rounded-5 text-center p-4">
-                        <img class="mx-auto mb-4 img-fluid" src="./imagens/esmeralda.png" alt="">
+                        <img class="mx-auto mb-4 img-fluid" id="icone" src="./imagens/esmeralda.png" alt="">
                         <h5>Conquista:</h5>
-                        <h3>36 horas</h3>
+                        <h3 id="hours">0 horas</h3>
                     </div>
                 </div>
 
@@ -192,7 +193,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="./perfilVoluntarioo.js"></script>
-    <script  src="../projetos/scripts/lista-projetos.js"></script>
 </body>
 
 </html>
