projetos em andamento

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -123,15 +123,8 @@
 
                 
 
-                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
-                    <div class="card rounded-5 card-projetos">
-                        <img src="./imagens/projeto3.jpg" class="rounded-5 pb-2" alt="...">
-                        <h5 class="tittle">Juntos Podemos</h5>
-                        <h3>18 horas</h3>
-                        <div class="col text-center">
-                            <button class="btn btn-secondary my-2 botao" id="botao" onclick="finalizar()">Finalizar</button>
-                        </div>
-                    </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3 container-cards" id="containerCards">
+                    <!--Cards em Javascript-->
                 </div>
             </div>
         </div>
