--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -123,7 +123,7 @@
 
                 
 
-                <div class="col-lg-4 col-md-4 col-sm-12 mt-3 container-cards" id="containerCards">
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3" id="containerCards">
                     <!--Cards em Javascript-->
                 </div>
             </div>
