fix: lista projetos

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -76,33 +76,33 @@
         </div>
     </main>
     <footer class="section text-center text-white">
-        <hr class="my-4" />
-        <div class="container">
-            <div class="row text-center d-flex justify-content-center">
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="../index.html" class="text-white">Home</a>
-                    </h6>
-                </div>
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="projetos.html" class="text-white">Projetos</a>
-                    </h6>
-                </div>
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#" class="text-white">Contato</a>
-                    </h6>
-                </div>
-            </div>
-            </section>
-        </div>
-        <hr class="my-4 mb-4" />
-        <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
-            <p class="mb-1">Todos os direitos reservados</p>
-            <h6> © 2023 Copyright: VoluntaRia</h6>
-        </div>
-    </footer>
+      <hr class="my-4" />
+      <div class="container">
+          <div class="row text-center d-flex justify-content-center">
+              <div class="col-md-2">
+                  <h6 class="text-uppercase font-weight-bold">
+                      <a href="../index.html" class="text-white">Home</a>
+                  </h6>
+              </div>
+              <div class="col-md-2">
+                  <h6 class="text-uppercase font-weight-bold">
+                      <a href="./projetos/projetos.html" class="text-white">Projetos</a>
+                  </h6>
+              </div>
+              <div class="col-md-2">
+                  <h6 class="text-uppercase font-weight-bold">
+                      <a href="https://api.whatsapp.com/send?phone=5531999999999" class="text-white">Contato</a>
+                  </h6>
+              </div>
+          </div>
+          </section>
+      </div>
+      <hr class="my-4 mb-4" />
+      <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
+          <p class="mb-1">Todos os direitos reservados</p>
+          <h6> © 2023 Copyright: VoluntaRia</h6>
+      </div>
+  </footer>
     <div class="modal-container">
         <div class="modal-body">
             <div class="modal-header">
