--- a/codigo-fonte/src/certificacao/certificacao.html
+++ b/codigo-fonte/src/certificacao/certificacao.html
@@ -49,24 +49,23 @@
         <div class="section section-1 mt-5">
             <div class="row">
                 <div class="offset-md-3 col-md-6 offset-sm-0 col-sm-12 card text-center rounded-5 text-white py-4 px-5">
-                    <h2>Parabéns, <span id="nomeUsuario"></span>!</h2>
+                    <h2>Parabéns, <span id="username"></span>!</h2>
                     <img class="mx-auto my-4" id="imagemNivel" alt="">
-                    <h3>Você atingiu o nível: <span id="nivel"></span></h3>
+                    <h3>Você atingiu o nível: <span id="nivelName"></span></h3>
                     <h5 class="mt-3">É com grande satisfação que concedemos este certificado a <span
-                            class="cor-texto" id="nomeUsuario"></span>,
+                            class="cor-texto" id="username2"></span>,
                         <br>
                         em reconhecimento ao seu compromisso e
                         dedicação excepcionais como voluntário na nossa plataforma. <br><br>
     
-                        Você atingiu nível <span class="cor-texto" id="nivel"></span>, um feito notável que demonstra seu
+                        Você atingiu o nível <span class="cor-texto" id="nivelName2"></span>, um feito notável que demonstra seu
                         comprometimento
                         e paixão pelo
                         voluntariado. <br> Sua jornada e esforço incansável o elevaram a este prestigioso patamar,
                         tornando-o um exemplo para todos
                         nós. <br><br>
     
-                        Durante sua trajetória, participou de um total incrível de <span class="cor-texto" id="horas"></span>
-                        <span class="cor-texto">horas</span> de
+                        Durante sua trajetória, participou de um total incrível de <span class="cor-texto" id="horasCertificado"></span> de
                         voluntariado,<br> contribuindo
                         de maneira significativa para causas nobres e impactando positivamente a vida de muitos.
                         <br>
