:art:style: Conserta alinhamento dos cards

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -117,15 +117,9 @@
         <div class="section section-3">
             <div class="row text-center my-5">
                 <h3 class="text-white">Projetos em andamento</h3>
-                <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
-                    
-                </div>
+                <div class="row" id="containerCards">
 
-                
-
-                <div class="col-lg-4 col-md-4 col-sm-12 mt-3" id="containerCards">
-                    <!--Cards em Javascript-->
-                </div>
+                </div>               
             </div>
         </div>
     </main>
