--- a/codigo-fonte/src/certificacao/certificacao.html
+++ b/codigo-fonte/src/certificacao/certificacao.html
@@ -37,13 +37,14 @@
                             <a class="nav-link active" href="./perfilEmpresa/perfilEmpresa.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sair</a>
+                            <a class="nav-link entrar-sair" href="#">Sair</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <script src="../geral/scripts/globalscript.js"></script>
 
     <main class="container" id="mainContent">
         <div class="section section-1 mt-5">
@@ -115,7 +116,6 @@
             </div>
         </footer>
     </footer>
-
     <script src="./certificacao.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
