--- a/codigo-fonte/src/certificacao/certificacao.html
+++ b/codigo-fonte/src/certificacao/certificacao.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./menu.css">
 </head>
 
-<body>
+<body onload ="certificadoVar()">
     <header>
         <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
             <div class="container-fluid rounded-3 mx-3">
@@ -66,7 +66,7 @@
                         tornando-o um exemplo para todos
                         nós. <br><br>
     
-                        Durante sua trajetória, participou de um total incrível de <span class="cor-texto" id="horasCertificado"></span> de
+                        Durante sua trajetória, participou de um total incrível de <span class="cor-texto" id="horasCertificado"></span> horas de
                         voluntariado,<br> contribuindo
                         de maneira significativa para causas nobres e impactando positivamente a vida de muitos.
                         <br>
