--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -52,7 +52,7 @@
             <div class="row mt-5">
                 <div class="col-6">
                     <div class="card rounded-5 text-center p-4">
-                        <img class="mx-auto mb-4 img-fluid perfil" src="../homePage/images/perfil-1.jpeg" alt="">
+                        <img id="perfilImage" class="mx-auto mb-4 img-fluid perfil" src="" alt="">
                         <h5>Nome:</h5>
                         <h3 id="nomeUsuario">Jonas</h3>
                     </div>
@@ -68,10 +68,7 @@
 
                 <div class="row"></div>
                 <div class=" col-6 mt-4 text-center">
-                    <button class="btn btn-secondary btn-imagem-perfil">Imagem perfil</button>
-                    <button class="btn btn-secundary btn-back">&lt;</button>
-                    <button class="btn btn-secundary btn-next">&gt;</button>
-
+                    <button class="btn btn-secondary btn-imagem-perfil">Trocar imagem</button>
                 </div>
 
                 <div class="col-6 mt-4 text-center">
