--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -76,7 +76,7 @@
         </div>
     </main>
     <footer class="section text-center text-white">
-      <hr class="my-4" />
+      <hr class="mb-4" />
       <div class="container">
           <div class="row text-center d-flex justify-content-center">
               <div class="col-md-2">
