feat: imprimir media query

--- a/codigo-fonte/src/certificacao/certificacao.html
+++ b/codigo-fonte/src/certificacao/certificacao.html
@@ -49,7 +49,7 @@
     <main class="container" id="mainContent">
         <div class="section section-1 mt-5">
             <div class="row">
-                <div class="offset-md-3 col-md-6 offset-sm-0 col-sm-12 card text-center rounded-5 text-white py-4 px-5">
+                <div id="certificacaoId" class="offset-md-3 col-md-6 offset-sm-0 col-sm-12 card text-center rounded-5 text-white py-4 px-5">
                     <h2>Parabéns, <span id="username"></span>!</h2>
                     <img class="mx-auto my-4" id="imagemNivel" alt="">
                     <h3>Você atingiu o nível: <span id="nivelName"></span></h3>
