feat: Preenchimento da categoria de forma dinamica

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/menu.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
-
+    <script src="../projetos/scripts/categorias.js"></script>
 <body>
     <div class="circle circle-1"></div>
     <div class="circle circle-2"></div>
@@ -76,16 +76,7 @@
                             <label for="categoria" class="form-label">Selecione a categoria do projeto:</label>
                             <select class="form-select" id="categoria" name="categoria">
                                 <option value="" selected disabled>Escolha uma categoria</option>
-                                <option value="1">Alimentação</option>
-                                <option value="2">Educação</option>
-                                <option value="3">Saúde</option>
-                                <option value="4">Meio ambiente</option>
-                                <option value="5">Direitos humanos</option>
-                                <option value="6">Cultura</option>
-                                <option value="7">Esportes</option>
-                                <option value="8">Tecnologia</option>
-                                <option value="9">Proteção aos animais</option>
-                                <option value="10">Desenvolvimento comunitário</option>
+
                             </select>
                         </div>
                         <div class="mb-4">
