--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -232,6 +232,7 @@
       <h6> © 2023 Copyright: VoluntaRia</h6>
     </div>
   </footer>
+  <script  src="./projetos/scripts/lista-projetos.js"></script>
   <script src="./geral/scripts/globalscript.js"></script> 
   <script src="./homePage/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
