--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -37,13 +37,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../projetos/projetos.html">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
+                            <a class="nav-link" href="../perfilEmpresa/perfilEmpresa.html">Perfil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link entrar-sair" href="../loginCadastro/loginCadastro.html">Entrar</a>
