--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -62,35 +62,33 @@
                     <form id="formulario">
                         <div class="mb-4">
                             <label for="input1" class="form-label">Nome do projeto:</label>
-                            <input type="text" class="form-control" id="nome-projeto" minlength="5" maxlength="50" placeholder="Exemplo: Amigos do bem">
+                            <input required type="text" class="form-control" id="nome-projeto" minlength="5" maxlength="50" placeholder="Exemplo: Amigos do bem">
                         </div>
                         <div class="mb-4">
                             <label for="input2" class="form-label">Nome de sua instituição:</label>
-                            <input type="text" class="form-control" id="nome-instituicao" minlength="5" maxlength="50" placeholder="Exemplo: PUC Minas">
+                            <input required type="text" class="form-control" id="nome-instituicao" minlength="5" maxlength="50" placeholder="Exemplo: PUC Minas">
                         </div>
                         <div class="mb-4">
                             <label for="horas" class="form-label">Disponibilidade de horas necessárias:</label>
-                            <input type="number" class="form-control" id="horas" name="horas" min="1" max="1000">
+                            <input required type="number" class="form-control" id="horas" name="horas" min="1" max="1000">
                         </div>
                         <div class="mb-4">
                             <label for="categoria" class="form-label">Selecione a categoria do projeto:</label>
-                            <select class="form-select" id="categoria" name="categoria">
+                            <select class="form-select" id="categoria" name="categoria" required>
                                 <option value="" selected disabled>Escolha uma categoria</option>
-
                             </select>
                         </div>
                         <div class="mb-4">
                             <label for="imagem" class="form-label">Selecione uma imagem de perfil do projeto:</label>
-                            <input type="text" class="form-control" id="imagem" name="imagem" accept="image/*" style="display: none">
+                            <input required type="text" class="form-control" id="imagem" name="imagem" accept="image/*" style="display: none">
                             <div id="galeria-imagens" class="mb-2">
                             </div>
                             <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher imagem</button>
                         </div>
                         <div class="mb-3">
                             <label for="textoGrande" class="form-label">Descrição do projeto:</label>
-                            <textarea class="form-control" id="descricao" name="textoGrande" rows="7" minlength="10" maxlength="250"></textarea>
+                            <textarea required class="form-control" id="descricao" name="textoGrande" rows="7" minlength="10" maxlength="250"></textarea>
                         </div>
-
                         <button type="submit" class="btn btn-lg mb-4 btn-secondary">Enviar</button>
                     </form>
                 </div>
