feat: listar projetos do perfil empresa - parte 2

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
+                <!-- <div class="container col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
                     <h3>Projetos ativos</h3>
                     <div class="card rounded-5 text-center">
                         <div class="row justify-content-center"> 
@@ -75,9 +75,9 @@
                                         <button class="btn btn-secondary my-2" id="encerrarBtn1">Encerrar</button>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3">
+                            <!-- <div class="col-lg-3 col-md-12 col-sm-12 mx-3">
                                 <div class="card rounded-5 card-projetos border-0">
                                     <img class="mx-auto mb-4 img-fluid perfil rounded-5"
                                         src="../projetos/images/imagem-voluntarios-09.jpg">
@@ -99,7 +99,7 @@
                                         <button class="btn btn-secondary my-2" id="encerrarBtn3">Encerrar</button>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
